// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageDetails renders 1`] = `
<Screen
  navBarColor="#fff"
  navBarStyle="context"
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Options",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/kabob.png",
        },
        "testID": "pages.details.editButton",
      },
    ]
  }
  showDismissButton={true}
  subtitle="Course 1"
  title="Page 1"
>
  <CanvasWebView
    navigator={
      Object {
        "dismiss": [MockFunction],
        "dismissAllModals": [MockFunction],
        "isModal": false,
        "pop": [MockFunction],
        "replace": [MockFunction],
        "show": [MockFunction],
        "showWebView": [MockFunction],
        "traitCollection": [MockFunction],
      }
    }
    onRefresh={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    scrollEnabled={true}
    source={
      Object {
        "baseURL": "/pages/page-1#jumpto",
        "html": "<p>Hello, World!</p>",
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  />
</Screen>
`;

exports[`PageDetails renders while loading 1`] = `
<Screen
  navBarColor="#fff"
  navBarStyle="context"
  rightBarButtons={false}
  showDismissButton={true}
  title="Page Details"
>
  <CanvasWebView
    navigator={
      Object {
        "dismiss": [MockFunction],
        "dismissAllModals": [MockFunction],
        "isModal": false,
        "pop": [MockFunction],
        "replace": [MockFunction],
        "show": [MockFunction],
        "showWebView": [MockFunction],
        "traitCollection": [MockFunction],
      }
    }
    onRefresh={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    scrollEnabled={true}
    source={
      Object {
        "baseURL": "",
        "html": "",
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  />
</Screen>
`;
